--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
    <!--  <link href="assets/assetsmobile/lib/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="assets/assetsmobile/lib/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <!-- <link href="assets/assetsmobile/lib/ionicons/css/ionicons.min.css" rel="stylesheet"> -->
     <link href="assets/assetsmobile/lib/typicons.font/typicons.css" rel="stylesheet">
 
