--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta charset="utf-8">
   <base href="/">
-  <title>MobileDash </title>
+  <title>MyDashboard </title>
 
  <!--============== INICIO HEADER MobileDash  ============================= -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -59,10 +59,10 @@
     <noscript>Please enable JavaScript to continue using this application.</noscript>
 
   <!--============== INICIO JS MobileDash  ============================= -->
- <button class="scroll-top scroll-to-target" data-target="html">
+<!--  <button class="scroll-top scroll-to-target" data-target="html">
             <span class="flaticon-up-arrow"></span>
         </button>
-       
+        -->
  <script src="assets/assetsmobile/lib/jquery/jquery.min.js"></script>
     <script src="assets/assetsmobile/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script>
