--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta charset="utf-8">
   <base href="/">
-  <title>MyDashboard </title>
+  <title>MySite </title>
 
  <!--============== INICIO HEADER MobileDash  ============================= -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -65,7 +65,7 @@
         -->
  <script src="assets/assetsmobile/lib/jquery/jquery.min.js"></script>
     <script src="assets/assetsmobile/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script>
+    <!-- <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script> -->
     <script src="assets/assetsmobile/lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
     <script src="assets/assetsmobile/js/azia.js"></script>
