--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,40 @@
     <script src="assets/assetsmobile/lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
     <script src="assets/assetsmobile/js/azia.js"></script>
+
+
+  <!-- <script src="../lib/jquery/jquery.min.js"></script> -->
+    <script src="assets/assetsmobile/lib/moment/min/moment.min.js"></script>
+    <script src="assets/assetsmobile/lib/jquery-ui/ui/widgets/datepicker.js"></script>
+    <!-- <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script src="../lib/ionicons/ionicons.js"></script> -->
+    <script src="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.js"></script>
+    <script src="assets/assetsmobile/lib/select2/js/select2.full.min.js"></script>
+
+    <!-- <script src="../js/azia.js"></script> -->
+    <script src="assets/assetsmobile/js/app-calendar-events.js"></script>
+    <script src="assets/assetsmobile/js/app-calendar.js"></script>
+    <script>
+      $(function(){
+        'use strict'
+
+        $('.select2-modal').select2({
+          minimumResultsForSearch: Infinity,
+          dropdownCssClass: 'az-select2-dropdown-modal',
+        });
+
+        $('#dateToday').text(moment().format('ddd, MMMM DD YYYY'));
+
+      });
+    </script>
+
+
+
+
+
+
+
+
     <script>
       $(function(){
         'use strict'
