appointments & quotes separation

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
    <!--  <link href="assets/assetsmobile/lib/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="assets/assetsmobile/lib/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
+      <link href="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.css" rel="stylesheet">
+    <link href="assets/assetsmobile/lib/select2/css/select2.min.css" rel="stylesheet">
+
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <!-- <link href="assets/assetsmobile/lib/ionicons/css/ionicons.min.css" rel="stylesheet"> -->
     <link href="assets/assetsmobile/lib/typicons.font/typicons.css" rel="stylesheet">
@@ -76,13 +79,13 @@
     <script src="assets/assetsmobile/lib/jquery-ui/ui/widgets/datepicker.js"></script>
     <!-- <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script> -->
     <!-- <script src="../lib/ionicons/ionicons.js"></script> -->
-    <script src="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.js"></script>
-    <script src="assets/assetsmobile/lib/select2/js/select2.full.min.js"></script>
+    <!-- <script src="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.js"></script> -->
+    <!-- <script src="assets/assetsmobile/lib/select2/js/select2.full.min.js"></script> -->
 
     <!-- <script src="../js/azia.js"></script> -->
-    <script src="assets/assetsmobile/js/app-calendar-events.js"></script>
-    <script src="assets/assetsmobile/js/app-calendar.js"></script>
-    <script>
+    <!-- <script src="assets/assetsmobile/js/app-calendar-events.js"></script> -->
+    <!-- <script src="assets/assetsmobile/js/app-calendar.js"></script> -->
+<!--     <script>
       $(function(){
         'use strict'
 
@@ -94,7 +97,7 @@
         $('#dateToday').text(moment().format('ddd, MMMM DD YYYY'));
 
       });
-    </script>
+    </script> -->
 
 
 
@@ -103,7 +106,7 @@
 
 
 
-    <script>
+<!--     <script>
       $(function(){
         'use strict'
 
@@ -123,7 +126,20 @@
         })
 
       });
-    </script>
+    </script> -->
+<!--      <script>
+      $(function(){
+        'use strict'
+
+        $('.select2-modal').select2({
+          minimumResultsForSearch: Infinity,
+          dropdownCssClass: 'az-select2-dropdown-modal',
+        });
+
+        $('#dateToday').text(moment().format('ddd, MMMM DD YYYY'));
+
+      });
+    </script> -->
   <!--============== FIN JS MobileDash  ============================= -->
   
   </div>
