--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       <link href="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.css" rel="stylesheet">
     <link href="assets/assetsmobile/lib/select2/css/select2.min.css" rel="stylesheet">
 
-    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+ <!--    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> -->
     <link href="assets/assetsmobile/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="assets/assetsmobile/lib/typicons.font/typicons.css" rel="stylesheet">
 
@@ -71,6 +71,7 @@
  <script src="assets/assetsmobile/lib/jquery/jquery.min.js"></script>
     <script src="assets/assetsmobile/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script> -->
+         <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script> 
     <script src="assets/assetsmobile/lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
     <script src="assets/assetsmobile/js/azia.js"></script>
@@ -79,7 +80,6 @@
   <!-- <script src="../lib/jquery/jquery.min.js"></script> -->
     <script src="assets/assetsmobile/lib/moment/min/moment.min.js"></script>
     <script src="assets/assetsmobile/lib/jquery-ui/ui/widgets/datepicker.js"></script>
-    <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script> 
     <script src="assets/assetsmobile/lib/chart.js/Chart.bundle.min.js"></script>
     <!-- <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script> -->
     <!-- <script src="../lib/ionicons/ionicons.js"></script> -->
