--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
       <link href="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.css" rel="stylesheet">
     <link href="assets/assetsmobile/lib/select2/css/select2.min.css" rel="stylesheet">
 
- <!--    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> -->
-    <link href="assets/assetsmobile/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <!-- <link href="assets/assetsmobile/lib/ionicons/css/ionicons.min.css" rel="stylesheet"> -->
     <link href="assets/assetsmobile/lib/typicons.font/typicons.css" rel="stylesheet">
 
     <!-- azia CSS -->
@@ -71,7 +71,7 @@
  <script src="assets/assetsmobile/lib/jquery/jquery.min.js"></script>
     <script src="assets/assetsmobile/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script> -->
-         <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script> 
+    <!-- <script src="assets/assetsmobile/lib/ionicons/ionicons.js"></script>  -->
     <script src="assets/assetsmobile/lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
     <script src="assets/assetsmobile/js/azia.js"></script>
