--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       <link href="assets/assetsmobile/lib/fullcalendar/fullcalendar.min.css" rel="stylesheet">
     <link href="assets/assetsmobile/lib/select2/css/select2.min.css" rel="stylesheet">
 
-    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+<!--     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> -->
     <!-- <link href="assets/assetsmobile/lib/ionicons/css/ionicons.min.css" rel="stylesheet"> -->
     <link href="assets/assetsmobile/lib/typicons.font/typicons.css" rel="stylesheet">
 
@@ -62,6 +62,8 @@
     <app-root></app-root>
 
     <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <script src="https://unpkg.com/ionicons@5.5.1/dist/ionicons.js"></script>
+
 
   <!--============== INICIO JS MobileDash  ============================= -->
 <!--  <button class="scroll-top scroll-to-target" data-target="html">
